# cloudmus

./: .gitignore  CMakeLists.txt  build.sh  cloudmus.astylerc  cloudmus.pro  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plugin.cpp  plugin.h  plugin_manager.cpp  plugin_manager.h  reformat_sources.sh  service.cpp  service.h  service_descriptor.cpp  service_descriptor.h  service_manager.cpp  service_manager.h  tools.h  webmusic.pro  yandex.js
app/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.ui  application.cpp  application.h  applicationoptionspage.cpp  applicationoptionspage.h  applicationoptionspage.ui  autosaver.cpp  autosaver.h  cookiejar.cpp  cookiejar.h  finalizator.cpp  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  options.cpp  options.h  optionsdialog.cpp  optionsdialog.h  optionsdialog.ui  optionspage.cpp  optionspage.h  pointers.h  scopedtools.h  service.cpp  service.h  service_descriptor.cpp  service_descriptor.h  service_manager.cpp  service_manager.h  shortcutsoptionspage.cpp  shortcutsoptionspage.h  shortcutsoptionspage.ui
services/: yandex.js
services/yandex/: description.ini  script.js
services/yandex.music/: description.ini  script.js
services/yandex.radio/: description.ini  script.js
